# xscreenshooter

./: .gitignore  CMakeLists.txt  README.md
hosts/: Uguu.host  catbox.host  litterbox.host  x0.host
lib/: xscreenshooter_capture_utils.c  xscreenshooter_capture_utils.h  xscreenshooter_debug.h  xscreenshooter_globals.h  xscreenshooter_post_capture_dialog.c  xscreenshooter_post_capture_dialog.h  xscreenshooter_post_capture_utils.c  xscreenshooter_post_capture_utils.h  xscreenshooter_pre_capture_dialog.c  xscreenshooter_pre_capture_dialog.h  xscreenshooter_utils.c  xscreenshooter_utils.h
src/: .main.c.swp  main.c
